# shirobot

./: flake.nix  pyproject.toml
shirobot/: __init__.py  bot.py
shirobot/cogs/: __init__.py  basic.py  eval.py
