[tool.poetry]
name = "shirobot"
version = "0.1.0"
description = "ShiroBot, a Discord bot for my needs."
authors = ["VerdeQuar <verdequar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pynacl = "^1.5.0"
py-cord = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
autoflake = "^2.1.1"

[tool.poetry.scripts]
shirobot = "shirobot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
